--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,39 @@ html {
     box-sizing: inherit
 }
 
-/* body, header, #title, #logo, #logo > img, #header, main, #social,
+/* body, #video-bg, header, #title, #logo, #logo > img, #header, main, #social,
 #mainMenu, #mainMenu > div, #eventMenu, #eventMenu > div, #footer,
 #footer > div { border: 1px solid var(--mainColor) } */
+
+/* видео */
+#video-bg {
+    width: 1293px;
+    position: absolute;
+    top: 40px;
+    /* left:0; */
+}
+
+.fullscreen-bg {
+    overflow: hidden;
+    z-index: -100;
+    position: relative;
+    height: 100%;
+    width: 100%;
+    padding-top:45%;
+}
+.fullscreen-bg__video {
+    position: absolute;
+    top: 170px;
+    left: 0;
+    width: 100%;
+}
+
+video {
+    height: 750px;
+}
+
+/* видео  */
+
 
 body {
     font-family: Gotham Pro;
@@ -19,6 +49,7 @@ body {
     height: 1024px;
     margin: 0 auto; 
     padding: 40px 0 0 153px;
+
 }
 
 header {
@@ -26,6 +57,12 @@ header {
     height: 153px;
     display: flex;
     justify-content: space-between;
+
+    
+    /* position: absolute;
+    top:20px; */
+    /* left:0; */
+
 }
 
 #title {
@@ -87,6 +124,7 @@ main {
     width: 1293px;
     height: 670px;
     margin-top: 23px;
+
 }
 
 main > p {
@@ -193,7 +231,7 @@ color: var(--mainColor)
 }
 
 #footer {
-    width: 1293px;
+    width: 1327px;
     height: 75px;
     display: flex;
     justify-content: space-between;
