--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ html {
     width: 1293px;
     position: absolute;
     top: 40px;
-    /* left:0; */
 }
 
 .fullscreen-bg {
@@ -27,19 +26,18 @@ html {
     position: relative;
     height: 100%;
     width: 100%;
-    padding-top:45%;
+    /* padding-top:45%; */
 }
 .fullscreen-bg__video {
     position: absolute;
     top: 170px;
-    left: 0;
+    /* left: 0; */
     width: 100%;
 }
 
 video {
     height: 750px;
 }
-
 /* видео  */
 
 
@@ -57,11 +55,6 @@ header {
     height: 153px;
     display: flex;
     justify-content: space-between;
-
-    
-    /* position: absolute;
-    top:20px; */
-    /* left:0; */
 
 }
 
@@ -82,26 +75,31 @@ color: #000000;
 }
 
 #logo {
-    width: 351px;
+    width: 450px;
     height: 153px;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
 }
 
+
 #logo > img:nth-child(1) {
     position: relative;
-    top: 3px; 
+    /* top: 3px; */
+    height: 150px
+
 }
 
 #logo > img:nth-child(2) {
     position: relative;
-    top: -15px; 
+    top: -17px; 
+    height: 150px
 }
 
 #logo > img:nth-child(3) {
     position: relative;
-    top: 8px; 
+    top: 10px; 
+    height: 180px
 }
 
 #header {
