--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 :root {
     --mainColor: #3725E4;
+    --mainWidth: 1293px;
 }
 html {
     box-sizing: border-box;
@@ -15,7 +16,7 @@ html {
 
 /* видео */
 #video-bg {
-    width: 1293px;
+    width: var(--mainWidth); /* 1293px */
     position: absolute;
     top: 40px;
 }
@@ -26,12 +27,11 @@ html {
     position: relative;
     height: 100%;
     width: 100%;
-    /* padding-top:45%; */
+
 }
 .fullscreen-bg__video {
     position: absolute;
     top: 170px;
-    /* left: 0; */
     width: 100%;
 }
 
@@ -51,7 +51,7 @@ body {
 }
 
 header {
-    width: 1293px;
+    width: var(--mainWidth);
     height: 153px;
     display: flex;
     justify-content: space-between;
@@ -119,7 +119,7 @@ text-transform: uppercase
 }
 
 main {
-    width: 1293px;
+    width: var(--mainWidth);
     height: 670px;
     margin-top: 23px;
 
@@ -140,7 +140,7 @@ line-height: 14px;
 }
 
 #mainMenu {
-    width: 1293px;
+    width: var(--mainWidth);
     height: 110px;
     margin-top: 80px;
     display: flex;
@@ -177,7 +177,7 @@ line-height: 20px;
 #soonEvent > h1 { margin-top: 80px; }
 
 #eventMenu {
-    width: 1293px;
+    width: var(--mainWidth);
     height: 147px;
     margin-top: 23px;
     display: flex;
