--- a/css/pages.css
+++ b/css/pages.css
@@ -16,11 +16,11 @@ html {
     box-sizing: inherit
 }
 
-/* ::-webkit-scrollbar {  */
+::-webkit-scrollbar { 
     /* chrome based */
-    /* width: 0;  
+    width: 0;  
     height: 0;
-} */
+}
 
 /* body, aside, #side_cont, #side_menu, #side_menu > div, main, 
 #logo_pages, main > h1, .sec1, .sec1 > div, .sec1 h2, 
