--- a/css/pages.css
+++ b/css/pages.css
@@ -8,7 +8,7 @@ html {
     scroll-behavior: smooth;
     -ms-overflow-style: none;  
     /* IE 10+ */
-    /* scrollbar-width: none;  */
+    scrollbar-width: none; 
     /* Firefox */
 }
 
