--- a/css/pages.css
+++ b/css/pages.css
@@ -6,21 +6,14 @@
 html {
     box-sizing: border-box;
     scroll-behavior: smooth;
-    -ms-overflow-style: none;  
-    /* IE 10+ */
-    scrollbar-width: none; 
-    /* Firefox */
+
 }
 
 *, *::before, *::after {
     box-sizing: inherit
 }
 
-::-webkit-scrollbar { 
-    /* chrome based */
-    width: 0;  
-    height: 0;
-}
+
 
 /* body, aside, #side_cont, #side_menu, #side_menu > div, main, 
 #logo_pages, main > h1, .sec1, .sec1 > div, .sec1 h2, 
@@ -28,38 +21,47 @@ html {
 footer > div { border: 1px solid var(--mainColor) } */
 
 body {
+    opacity: 0;
     font-family: Gotham Pro;
-    width: 1600px;
-    /* height: 2895px; */
+    max-width: 1600px;
+    min-width: 1033px;
     margin: 0 auto; 
     /* display: flex; */
+
 }
 
 a, a:link, #a:visited, 
 a:active { color: #000000; }
 
+a { transition: .3s }
+a:hover { color: var(--hoverColor) }
+
 aside {
     width: 375px;
+    margin: -20px 40px 0 0;
+    /* margin: 48px 40px 0 0; */
     position: fixed;
-    top: 48px;
-    overflow: auto;
-    /* height: 2895px; */
+    /* z-index: 101; */
+    display: flex;
+    justify-content: flex-end;
 }
 
 main {
-    width: 1179px;
-    overflow: auto;
+    width: 70%;
     position: relative;
     left: 421px;
-    /* height: 2895px; */
+
+    /* position: relative;
+    left: 421px; */
 }
 
 #side_cont {
     width: 214px;
-    position: relative;
-    left: 161px;
+    /* position: relative;
+    left: 161px; */
     
 }
+
 
 #logo_pages {
     font-style: normal;
@@ -90,23 +92,19 @@ text-decoration: none;
 
 #side_menu {
     width: 214px;
-    /* height: 656px; */
     margin-top: 52px;
    
 }
 
 #side_menu > div {
     width: 100%;
-    /* height: 105px; */
+    /* height: 100px; */
     display: flex;
-    /* flex-wrap: wrap;*/
    justify-content: flex-start;
    align-items: center; 
 }
 
-/* @media screen and (max-width: 1366px) {
-    #side_menu > div { height: 105px; }
-} */
+/* .box_menu { height: 100px; } */
 
 #side_menu img {
     width: 44px;
@@ -130,109 +128,123 @@ color: var(--mainColor)
     justify-content: space-between;
 }
 
-main > h1 {
-font-style: normal;
-font-weight: bold;
-font-size: 42px;
-margin-top: 71px;
-}
 
-main > h1, main > img {
-    position: relative;  
-    left: 65px; }
-
-#vline1 {
-    margin: 14px 0 19px 18px;
-}
-
-.sec1 { width: 100%;
-    margin-left: 35px; }
-.sec1 > div {
-    width: 656px;
-    margin-left: 30px;
-}
-
-.sec1 h2 {
+.sec1 h1 {
     font-style: normal;
     font-weight: bold;
-    font-size: 22px;
-    padding-bottom: 27px;
-}
+    font-size: 42px;
+    margin-top: 71px;
+    }
+ 
+    .sec1 h1, .sec1 h2, .sec1 p, .sec1 li {
+        padding-left: 65px;
+        width: 656px; 
+    }
+       
+        #vline1 {
+            margin: 14px 0 19px 83px;
 
-.sec1 p, .sec1 ul {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 20px;
-}
+        }
+        
+        
+        .sec1 h2 {
+            font-style: normal;
+            font-weight: bold;
+            font-size: 22px;
+            padding-bottom: 27px;
+        }
+        
+        .sec1 p, .sec1 ul {
+            font-style: normal;
+            font-weight: normal;
+            font-size: 14px;
+            line-height: 20px;
+        }
+        
+        .sec1 .b {
+            font-weight: bold;  
+        }
+        
+        .sec1 ul {
+            list-style: none;
+            padding: 12px 0 12px 0;
+            padding-bottom: 0;
+        }
+        
+        .sec1 li {
+            padding-bottom: 20px;
+        }
+        
+        .sec1 .pic {
+            margin: 47px 0 47px 0;
+            width: 100%;
+            display: flex;
+            align-items: center;
+        }
 
-.sec1 .b {
-    font-weight: bold;  
-}
+          #pic1 { 
+            width: 100%;
+            padding: 0 160px 0 30px;
+        }
 
-.sec1 ul {
-    list-style: none;
-    padding: 12px 0 12px 0;
-    padding-bottom: 0;
-}
+        #pic2 {
+            padding-left: 30px;
+        }
+        
+         .sec1 a {
+            color: var(--mainColor);
+        }
+        
+        .pic > p {
+            font-family: Georgia;
+            font-style: italic;
+            font-weight: normal;
+            font-size: 16px;
+            width: 273px;
+            margin-left: 41px;
+            padding-left: 0;
+        }
+        
 
-.sec1 li {
-    padding-bottom: 20px;
-}
 
-.sec1 .pic {
-    margin: 47px 0 47px 0;
-    width: 100%;
-    display: flex;
-    align-items: center;
-}
 
- .sec1 a {
-    color: var(--mainColor);
-}
 
-.pic > p {
-    font-family: Georgia;
-    font-style: italic;
-    font-weight: normal;
-    font-size: 16px;
-    width: 273px;
-    margin-left: 41px;
-}
+        .sec2 {
+            padding: 49px 0 46px 0;
+            margin-left: 35px;
+            margin-right: 100px;
+            /* border: 1px solid #F3F3F3;  */
+        }
+        
+        #part {
+            width: 100%;
+            height: 160px;
+            margin: 50px 0 0 0;
+            display: flex;
+        
+        }
+        
+        #part div {  
+            width: 100%;
+            /* height: 100%; */
+            border-left: 1px solid #F3F3F3;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        
+        #part div:last-child {
+            border-right: 1px solid #F3F3F3;
+        }
+        
 
-.sec2 {
-    padding: 49px 0 46px 0;
-    margin-left: 35px;
-    /* border: 1px solid #F3F3F3;  */
-}
-
-#part {
-    width: 985px;
-    height: 160px;
-    margin: 50px 0 0 0;
-    display: flex;
-
-}
-
-#part div {  
-    width: 100%;
-    height: 100%;
-    border-left: 1px solid #F3F3F3;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#part div:last-child {
-    border-right: 1px solid #F3F3F3;
-}
-
-/* обратная связь */
+        /* обратная связь */
 
 .sec3  {
-    width: 984px;
+    /* width: 100%; */
     height: 534px;
     margin-left: 35px;
+    margin-right: 100px;
     box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.14);
     border-radius: 22px;
     padding-top: 44px;
@@ -248,12 +260,12 @@ main > h1, main > img {
 }
 
 .sec3 > div:nth-child(1) {
-    width: 620px;
+    width: 64%;
     margin-left: 30px;
 
 }
 .sec3 > div:nth-child(2) {
-    width: 194px;   
+    width: 18%;   
     margin-left: 61px;
     font-family: Georgia;
     font-style: Italic;
@@ -261,7 +273,7 @@ main > h1, main > img {
 }
 
 input, textarea {
-    width: 620px;
+    width: 100%;
     margin-bottom: 40px;
     background: #F3F3F3;
     border: 0;
@@ -302,63 +314,81 @@ input[type="submit"] {
 
 /* обратная связь */
 
-footer {
-    width: 1290px;
-    height: 218px;
-    margin-left: 160px;
-    border-top: 1px solid #F3F3F3;
-    display: flex;
-} 
-
-footer > div:nth-child(1) {
-width: 146px;
-height: 13px;
-margin-top: 105px;
-font-style: normal;
-font-weight: normal;
-font-size: 14px;
-color: var(--mainColor)
-
-}
-footer > div:nth-child(1) a {
-color: var(--mainColor)
-}
-
-footer > div:nth-child(2) {
-    width: 545px;
-    height: 82px;
-    margin-left: 176px;
-    margin-top: 39px;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 16px;
-}
-
-#logo {
-    width: 450px;
-    height: 153px;
-    margin-top: 28px;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-}
 
 
-#logo > img:nth-child(1) {
-    position: relative;
-    height: 150px
+        /* Футер */
 
-}
+        footer {
+            /* width: 100%; */
+            /* z-index: 100; */
+            height: 218px;
+            margin-left: 160px;
+            border-top: 1px solid #F3F3F3;
+            display: flex;
+        } 
+        
+        footer > div:nth-child(1) {
+        width: 146px;
+        height: 13px;
+        margin-top: 105px;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        color: var(--mainColor)
+        
+        }
+        footer > div:nth-child(1) a {
+        color: var(--mainColor)
+        }
+        
+        footer > div:nth-child(2) {
+            width: 545px;
+            height: 82px;
+            margin-left: 176px;
+            margin-top: 39px;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 12px;
+            line-height: 16px;
+        }
+        
+        #logo {
+            width: 450px;
+            height: 153px;
+            margin-top: 28px;
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+        }
+        
+        
+        #logo > img:nth-child(1) {
+            position: relative;
+            height: 150px
+        
+        }
+        
+        #logo > img:nth-child(2) {
+            position: relative;
+            top: -17px; 
+            height: 150px
+        }
+        
+        #logo > img:nth-child(3) {
+            position: relative;
+            top: 10px; 
+            height: 180px
+        }
 
-#logo > img:nth-child(2) {
-    position: relative;
-    top: -17px; 
-    height: 150px
-}
+        /* Футер */
 
-#logo > img:nth-child(3) {
-    position: relative;
-    top: 10px; 
-    height: 180px
-}
+
+
+        /* прокрутка */
+#upward { 
+            display: none }
+  
+  #arr {
+      position: fixed;
+  }
+  /* прокрутка */
