--- a/css/a1.css
+++ b/css/a1.css
@@ -5,24 +5,14 @@
 
 html {
     box-sizing: border-box;
-    scroll-behavior: smooth;
-    -ms-overflow-style: none;  
-    /* IE 10+ */
-    scrollbar-width: none; 
-    /* Firefox */
+
 }
 
 *, *::before, *::after {
     box-sizing: inherit
 }
 
-::-webkit-scrollbar { 
-    /* chrome based */
-    width: 0;  
-    height: 0;
-}
-
-body, aside, #side_cont, #side_menu, #side_menu > div, main, 
+.body, aside, #side_cont, #side_menu, #side_menu > div, main, 
 #logo_pages, main > h1, .sec1, .sec1 > div, .sec1 h2, 
 .pic > p, #part, #part div, .sec3 > div, footer,
 footer > div { border: 1px solid var(--mainColor) }
