--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 :root {
     --mainColor: #3725E4;
-    --hoverColor: #5745FF;
-    --mainWidth: 1290px;
+    --mainWidth: 1293px;
 }
 html {
     box-sizing: border-box;
@@ -11,280 +10,253 @@ html {
     box-sizing: inherit
 }
 
-/* body, #mainContainer, #video-bg, header, #title, #logo, #logo > img, 
-#header, main, #social, #sContainer, 
+ body, #video-bg, header, #title, #logo, #logo > img, #header, main, #social,
 #mainMenu, #mainMenu > div, #eventMenu, #eventMenu > div, #footer,
-#footer > div, section { border: 1px solid var(--mainColor) } */
-
-
-
-body {
-    opacity: 0;
-    font-family: Gotham Pro;
-    max-width: 1600px;
-    min-width: 1033px;
-    margin: 0 auto; 
-
-}
-
-
-a { transition: .3s }
-a:hover { color: var(--hoverColor) }
-
-
-#mainContainer {
-    max-width: var(--mainWidth);
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: center;
-}
-
+#footer > div { border: 1px solid var(--mainColor) } 
 
 /* видео */
 #video-bg {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    width: var(--mainWidth); /* 1293px */
+    position: absolute;
+    top: 40px;
+}
+
+.fullscreen-bg {
     overflow: hidden;
     z-index: -100;
-     background-size: cover;
-}
+    position: relative;
+    height: 100%;
+    width: 100%;
 
-#video-bg > video {
+}
+.fullscreen-bg__video {
     position: absolute;
-    top: 0;
-    left: 0;
-    min-width: 100%; 
-    min-height: 100%;
-    width: auto;
-    height: auto; 
-    
+    top: 170px;
+    width: 100%;
 }
 
- @supports (object-fit: cover) {
-     #video-bg > video {
-         top: 0;
-         left: 0;
-         width: 0%;
-         height: 100%;
-         object-fit: cover;
-     }
- }
+video {
+    height: 750px;
+}
 /* видео  */
 
 
+body {
+    font-family: Gotham Pro;
+    width: 1600px;
+    height: 1024px;
+    margin: 0 auto; 
+    padding: 40px 0 0 153px;
 
+}
 
-
-header, #header, section, #footer {
-    width: 100%;
+header {
+    width: var(--mainWidth);
+    height: 153px;
     display: flex;
     justify-content: space-between;
 
 }
 
-header {
-    padding-top: 17px; 
+#title {
+/* ІnnovationByKhau */
 
+width: 562px;
+font-style: normal;
+font-weight: 900;
+font-size: 77px;
+text-transform: uppercase;
+color: #000000;
+
+}
+
+#title > span {
+    color: var(--mainColor);
+}
+
+#logo {
+    width: 450px;
+    height: 153px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+
+#logo > img:nth-child(1) {
+    position: relative;
+    /* top: 3px; */
+    height: 150px
+
+}
+
+#logo > img:nth-child(2) {
+    position: relative;
+    top: -17px; 
+    height: 150px
+}
+
+#logo > img:nth-child(3) {
+    position: relative;
+    top: 10px; 
+    height: 180px
 }
 
 #header {
-    width: 346px;
-    height: 25px;
+width: 346px;
+margin-top: 5px;
+display: flex;
+justify-content: space-between;
+align-items: center;
 }
 
 #header > h1, #soonEvent > h1 {
+font-style: normal;
+font-weight: bold;
+font-size: 18px;
+text-transform: uppercase
+
+}
+
+main {
+    width: var(--mainWidth);
+    height: 670px;
+    margin-top: 23px;
+
+}
+
+main > p {
+font-style: normal;
+font-weight: normal;
+font-size: 12px;
+line-height: 14px;
+}
+
+#social {
+    width: 195px;
+    margin-top: 23px;
+    display: flex;
+    justify-content: space-between;
+}
+
+#mainMenu {
+    width: var(--mainWidth);
+    height: 110px;
+    margin-top: 80px;
+    display: flex;
+}
+
+#mainMenu > div {
+    width: 270px; /* ширина блоков */
+    height: 110px;
+    margin-right: 70px; /* расстояние между блоками*/
+    display: flex;
+    flex-wrap: wrap;
+    align-content: space-between;
+}
+
+#mainMenu div div {
+height: 60px; 
+}
+
+#mainMenu h2 {
     font-style: normal;
     font-weight: bold;
-    font-size: 18px;
-    text-transform: uppercase
-    
-    }
+    font-size: 16px;
+    margin-bottom: 5px;
+    color: var(--mainColor);
+}
 
+#mainMenu div div, #eventMenu p {
+font-style: normal;
+font-weight: normal;
+font-size: 14px;
+line-height: 20px;
+}
 
-    #title {
-        /* ІnnovationByKhau */
-        
-        width: 562px;
-        font-style: normal;
-        font-weight: 900;
-        font-size: 77px;
-        text-transform: uppercase;
-        color: #000000;
-        
-        }
-        
-        #title > span {
-            color: var(--mainColor);
-        }
-        
-        #logo {
-            width: 450px;
-            height: 153px;
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-start;
-        }
-        
-        
-        #logo > img:nth-child(1) {
-            position: relative;
-            height: 150px
-        
-        }
-        
-        #logo > img:nth-child(2) {
-            position: relative;
-            top: -17px; 
-            height: 150px
-        }
-        
-        #logo > img:nth-child(3) {
-            position: relative;
-            top: 10px; 
-            height: 180px
-        }
-        
+#soonEvent > h1 { margin-top: 80px; }
 
+#eventMenu {
+    width: var(--mainWidth);
+    height: 147px;
+    margin-top: 23px;
+    display: flex;
 
-    #sec1 {
+}
 
-        display: flex;
-        flex-wrap: wrap;
-        align-content: flex-start;
-        align-self: flex-start;
-    }
+#eventMenu > div {
+    width: 370px; /* ширина блоков */
+    height: 147px;
+    margin-right: 50px; /* расстояние между блоками*/
+    padding: 20px;
 
-    #sec1 > p {
-        font-style: normal;
-        font-weight: normal;
-        font-size: 12px;
-        line-height: 14px;
+}
 
-        }
-        
-        #social {
-            width: 195px;
-            margin-top: 23px;
-            display: flex;
-            justify-content: space-between;
-        }
+#eventMenu div div {
+width: 100%;    
 
-        /* #social img {
-                height: 15px;
-        } */
+}
 
+#eventMenu div * {
+    padding: 5px;
+}
+.date {
+font-style: normal;
+font-weight: normal;
+font-size: 11px;
+margin-top: -5px;
+}
 
-        #mainMenu > div {
-            width: 270px; 
-            height: 110px;
-            margin-right: 70px; 
-            display: flex;
-            flex-wrap: wrap;
-            align-content: space-between;
-        }
-        
-        #mainMenu div div {
-        height: 60px; 
-        }
-        
-        #mainMenu h2 {
-            font-style: normal;
-            font-weight: bold;
-            font-size: 16px;
-            margin-bottom: 5px;
-            color: var(--mainColor);
-        }
-        
-        #mainMenu div div, #eventMenu p {
-        font-style: normal;
-        font-weight: normal;
-        font-size: 14px;
-        line-height: 20px;
-        }
-        
-        #eventMenu {
-            align-self: flex-start;
-        }
+#eventMenu h2 {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+}
 
-     
-        #eventMenu > div {
-            width: 370px; 
-            height: 147px;
-            margin-right: 50px; 
-            padding: 20px;
-        
-        }
-        
-        #eventMenu div div {
-        width: 100%;    
-        
-        }
-        
-        #eventMenu div * {
-            padding: 5px;
-        }
-        .date {
-        font-style: normal;
-        font-weight: normal;
-        font-size: 11px;
-        margin-top: -5px;
-        }
-        
-        #eventMenu h2 {
-            font-style: normal;
-            font-weight: bold;
-            font-size: 16px;
-        }
-        
-        #eventMenu a {
-            padding-left: 0;
-            text-decoration: none;
-        }
-        
-        .eventOff { color: #000000 }
-        
-        .eventOn { color: var(--mainColor) }
-        
-        .currentEvent {
-        border: 2px solid var(--mainColor);
-        border-radius: 24px;
-        color: var(--mainColor)
-        }
+#eventMenu a {
+    padding-left: 0;
+    text-decoration: none;
+}
 
+.eventOff { color: #000000 }
 
-        #footer > div {
-            width: 160px;
-            height: 75px;
-           text-align: center;
-           /* margin-bottom: 10px; */
-           display: flex;
-           flex-wrap: wrap;
-           justify-content: center;
-           align-content: space-between;
-           
-        }
-        
-        #footer {
-            margin-bottom: 10px;
-        }
+.eventOn { color: var(--mainColor) }
 
-        #footer img {
-            width: 44px;
-            height: 44px;
-        }
-        
-        #footer h2 { width: 100% }
-        
-        #footer a {
-        font-style: normal;
-        font-weight: bold;
-        font-size: 16px;
-        text-decoration: none;
-        color: var(--mainColor)
-        }
+.currentEvent {
+border: 2px solid var(--mainColor);
+border-radius: 24px;
+color: var(--mainColor)
+}
 
+#footer {
+    width: 1327px;
+    height: 75px;
+    display: flex;
+    justify-content: space-between;
+}
+
+#footer > div {
+    width: 160px;
+    height: 75px;
+   text-align: center;
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: center;
+   align-content: space-between;
+   
+}
+
+#footer img {
+    width: 44px;
+    height: 44px;
+}
+
+#footer h2 { width: 100% }
+
+#footer a {
+font-style: normal;
+font-weight: bold;
+font-size: 16px;
+text-decoration: none;
+color: var(--mainColor)
+}
