--- a/css/education.css
+++ b/css/education.css
@@ -138,7 +138,8 @@ top: -60px;
 .hc1 { 
     position: relative;
     top: 450px;
-    min-height: 170px;
+    height: 170px;
+    overflow: auto;
  }
 
 .card_arrow {
@@ -151,7 +152,7 @@ top: -60px;
 /* карточка */
 
 
-#car3, #car6 {
+#car3, #car6, #car5 {
     width: 70%;
 }
 
