--- a/css/web_app.css
+++ b/css/web_app.css
@@ -3,7 +3,7 @@
 
 .sect1 {
     max-width: 985px;
-    height: 600px;
+    height: 650px;
     box-shadow: 0px 0px 35px rgba(0, 0, 0, 0.14);
     border-radius: 0px 0px 24px 24px;
    position: relative;
@@ -454,4 +454,11 @@ top: -60px;
 
 #part div:last-child {
     border-right: 1px solid #F3F3F3;
+}
+
+.hc1 { 
+    position: relative;
+    top: 450px;
+    height: 170px;
+    overflow: auto; 
 }
