--- a/css/news_no_img.css
+++ b/css/news_no_img.css
@@ -15,9 +15,11 @@
 	line-height: 20px;
 	color: #3725E4;
 }
+
 .hover:hover{
 	color: #3725E4;
 }
+
 .news_no_img img{
 	margin-left: 20px;
 }
@@ -95,4 +97,11 @@
 }
 .news_no_img__button{
 	margin-left: 30%;
+}
+
+@media (max-width: 768px) {
+.news_no_img{
+	margin-left: 20px;
+}
+
 }
