--- a/css/news_on_img.css
+++ b/css/news_on_img.css
@@ -8,9 +8,6 @@
 	margin-bottom: 80px;
 	max-width: 980px;
 }
-.hover:hover{
-	color: #3725E4;
-}
 .news_on_img a{
 	font-family: 'Gotham Pro';
 	font-style: normal;
@@ -19,6 +16,11 @@
 	line-height: 20px;
 	color: #3725E4;
 }
+
+.hover:hover{
+	color: #3725E4;
+}
+
 .news_on_img__title{
 	max-width: 720px;
 	/* padding-top: 110px; */
@@ -60,4 +62,23 @@ margin-bottom: 50px;
 
 .button__back{
 	margin-left: 20px;
+}
+
+@media (max-width: 768px) {
+
+.news_on_img{
+
+	margin-left: 20px;
+
+}
+
+.news_on_img__content img{
+	width: 95%;
+}
+
+.news_on_img__content h2, .news_on_img__content p{
+	margin-left: 30px;
+	max-width: 670px;
+}
+
 }
