--- a/css/web_app.css
+++ b/css/web_app.css
@@ -462,3 +462,49 @@ top: -60px;
     height: 170px;
     overflow: auto; 
 }
+
+@media (max-width: 768px) {
+
+.sect1 {
+    max-width: 740px;
+   top: -135px;
+   margin-left: 5px;
+   height: 720px;
+}
+
+.sect1 h1 {
+    padding-left: 20px;
+    padding-top: 90px;
+
+}
+
+.sect1 .cont, .sect1 .cont1 {
+    width: 95%;
+    /* max-height: 300px;     */
+}
+.sect1 .cont1 {
+    margin-top: 110px;
+}    
+
+.sec-1, .news_no_img__address img{
+    margin-left: 30px;
+}
+
+.feedback {
+    margin-left: 5px;
+    justify-content: space-evenly;
+
+}
+
+.feedback__block {
+    padding: 20px;
+    max-width: 230px;
+    /* min-height: 360px; */
+}
+.card h3 {
+    top: -50px;
+}
+.hc1 { 
+    top: 570px;
+}
+}
