--- a/css/style.css
+++ b/css/style.css
@@ -204,6 +204,7 @@ header {
         font-weight: normal;
         font-size: 14px;
         line-height: 20px;
+        overflow: auto;
         }
         
         #eventMenu {
