--- a/css/incubator.css
+++ b/css/incubator.css
@@ -11,84 +11,92 @@
     font-weight: bold;
     font-size: 42px;
     margin-top: 71px;
-    }
- 
-    .sec1 h1, .sec1 h2, .sec1 p, #tgs,
-    #addr {
-        padding-left: 65px;
-        width: 720px; 
-    }
-       
-        #vline1 {
-            margin: 14px 0 19px 83px;
+}
 
-        }
-        
-        
+.sec1 h1,
+.sec1 h2,
+.sec1 p,
+#tgs,
+#addr {
+    padding-left: 65px;
+    width: 720px;
+}
+
+#vline1 {
+    margin: 14px 0 19px 83px;
+
+}
 
 
 
-        
-        .sec1 p {
-            font-family: Georgia;
-            font-style: italic;
-            font-weight: normal;
-            font-size: 16px;
-            line-height: 130%;
-            padding-bottom: 23px;
-        }
-        
-        .sec1 .b {
-            font-weight: bold;  
-        }
 
-        .sec1 h2 {
-            font-style: normal;
-            font-weight: bold;
-            font-size: 22px;
-            padding-top: 29px;
-            padding-bottom: 42px;
-        }
 
-        #tgs { margin-bottom: 49px; }
-        #tgs span {
-            padding: 12px;
-            font-style: normal;
-            font-weight: normal;
-            font-size: 16px;
-            color: var(--mainColor);
-            border: 2px solid var(--mainColor);
-            border-radius: 23px;
-            margin-right: 16px;
-        }
 
-        #tgs a {
-             color: var(--hoverColor)
-        }
+.sec1 p {
+    font-family: Georgia;
+    font-style: italic;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 130%;
+    padding-bottom: 23px;
+}
 
-     #addr {  
-         margin-top: 22px; 
-         margin-bottom: 48px;
-    }       
-     #addr > img { 
-         margin-right: 14px; 
-        
-    }   
+.sec1 .b {
+    font-weight: bold;
+}
 
-  
+.sec1 h2 {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 22px;
+    padding-top: 29px;
+    padding-bottom: 42px;
+}
+
+#tgs {
+    margin-bottom: 49px;
+}
+
+#tgs span {
+    padding: 12px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    color: var(--mainColor);
+    border: 2px solid var(--mainColor);
+    border-radius: 23px;
+    margin-right: 16px;
+}
+
+#tgs a {
+    color: var(--hoverColor)
+}
+
+#addr {
+    display: block;
+    margin-top: 22px;
+    margin-bottom: 48px;
+}
+
+#addr>img {
+    margin-right: 14px;
+
+}
+
+
 /* карточка */
 
-  .card {
-    width: 100%; 
+.card {
+    width: 100%;
     padding-left: 35px;
     padding-right: 100px;
     margin-bottom: 120px;
     display: flex;
     justify-content: space-between;
 
-  }
-   
-.card > div {
+}
+
+.card>div {
     /* overflow: hidden; */
     max-width: 311px;
     height: 480px;
@@ -99,65 +107,68 @@
     flex-wrap: wrap;
     align-content: space-between; */
 
-} 
+}
 
 .card_img {
     width: 100%;
-} 
+}
 
 .card h3 {
-font-style: normal;
-font-weight: bold;
-width: 90%;  
-height: 60px;;  
-font-size: 22px;
-/* font-size: 1.3vw; */
-line-height: 21px;
-position: relative;
-top: -90px;
-left: 24px;
-/* padding-right: 10px; */
-color: #FFFFFF;
-text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
+    font-style: normal;
+    font-weight: bold;
+    width: 90%;
+    height: 60px;
+    ;
+    font-size: 22px;
+    /* font-size: 1.3vw; */
+    line-height: 21px;
+    position: relative;
+    top: -90px;
+    left: 24px;
+    /* padding-right: 10px; */
+    color: #FFFFFF;
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
 }
 
 .card div div {
-font-style: normal;
-font-weight: normal;
-font-size: 14px;
-line-height: 20px;
-padding: 24px;
-position: relative;
-top: -60px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    padding: 24px;
+    position: relative;
+    top: -60px;
 
 }
 
-.hc1 { 
+.hc1 {
     position: relative;
     top: 450px;
     min-height: 170px;
- }
+}
 
 .card_arrow {
     text-align: right;
     margin-right: 14px;
-    
+
 }
 
 /* карточка */
 
 
 #kolb {
-position: relative;
-left: -248px;
-top: -83px;
+    position: relative;
+    left: -248px;
+    top: -83px;
 }
 
 #nev {
     padding-left: 35px;
 }
 
-#df { cursor: pointer }
+#df {
+    cursor: pointer
+}
 
 
 #cons {
@@ -169,7 +180,7 @@ top: -83px;
 #cons h1 {
     width: 350px;
     /* height: 200px; */
-   margin-right: 20px;
+    margin-right: 20px;
     margin-top: 0;
 
 
@@ -178,58 +189,61 @@ top: -83px;
 #addr1 {
     /* padding-top: 65px; */
     width: 550px;
+    margin-left: 30px;
 }
 
 
-#m1 { 
+#m1 {
     width: 100%;
     padding-left: 65px;
     margin-bottom: 10px;
     display: flex;
 }
 
-#m2 { max-width: 620px;
+#m2 {
+    max-width: 620px;
     margin-top: 75px;
-     }
+}
 
-#m2 > span {
+#m2>span {
     font-family: Georgia;
-font-style: italic;
-font-weight: normal;
-font-size: 16px;
-line-height: 130%;
+    font-style: italic;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 130%;
 
 }
 
-#m3 { width: 33.3%;
-        height: 380px;
-        position: relative;
-        top: -10px;
-        cursor: pointer;
-    }
+#m3 {
+    width: 33.3%;
+    height: 380px;
+    position: relative;
+    top: -10px;
+    cursor: pointer;
+}
 
 /* #m3 span {
     text-align: center;
 } */
 
-#m4 { 
+#m4 {
     width: 100%;
     margin-top: 20px;
-    display: flex; 
-} 
+    display: flex;
+}
 
 #m4 h3 {
     font-style: normal;
-font-weight: bold;
-font-size: 16px;
-padding-bottom: 10px;
+    font-weight: bold;
+    font-size: 16px;
+    padding-bottom: 10px;
 }
 
 #m4 span {
     font-style: normal;
-font-weight: normal;
-font-size: 14px;
-line-height: 20px;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
 
 }
 
@@ -245,30 +259,30 @@ line-height: 20px;
 
 .c1 h3 {
     font-style: normal;
-font-weight: bold;
-font-size: 22px;
-line-height: 21px;
-text-align: center;
-position: relative;
-top: -90px;
-left: 14px;
-color: var(--mainColor);
+    font-weight: bold;
+    font-size: 22px;
+    line-height: 21px;
+    text-align: center;
+    position: relative;
+    top: -90px;
+    left: 14px;
+    color: var(--mainColor);
 }
 
 .c1 span {
-font-style: normal;
-font-weight: normal;
-font-size: 14px;
-line-height: 20px;
-text-align: center;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    text-align: center;
 
 }
 
 .c2 {
-text-align: center;
-padding: 24px;
-position: relative;
-top: -80px;
+    text-align: center;
+    padding: 24px;
+    position: relative;
+    top: -80px;
 }
 
 .arr1 {
@@ -279,6 +293,7 @@ top: -80px;
 .tel {
     position: relative;
     /* top: 0; */
+    margin-top: 50px;
     padding-left: 100px;
     width: 330px;
     /* height: 100px; */
@@ -294,9 +309,9 @@ top: -80px;
 
 .tel div {
     font-style: normal;
-font-weight: normal;
-font-size: 14px;
-line-height: 20px;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
 }
 
 .tel span {
@@ -345,7 +360,7 @@ line-height: 20px;
     width: 70%;
     height: 360px;
     border: 2px solid #3725E4;
-    border-radius: 22px; 
+    border-radius: 22px;
 }
 
 .m3_b {
@@ -356,16 +371,16 @@ line-height: 20px;
 
 
 .m1_b h2 {
-    padding-left: 24px; 
+    padding-left: 24px;
     padding-bottom: 0;
 }
 
-.m1_b h2 + p {
+.m1_b h2+p {
     font-family: Georgia;
-    padding-left: 24px; 
+    padding-left: 24px;
     padding-bottom: 0;
     margin-top: 24.13px;
-    width: 384px;
+    width: 90%;
     font-family: Georgia;
     font-style: italic;
     font-weight: normal;
@@ -382,9 +397,9 @@ line-height: 20px;
     padding-bottom: 0;
     margin-bottom: 33px;
     font-style: normal;
-font-weight: normal;
-font-size: 14px;
-line-height: 20px;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
 }
 
 #tel1 {
@@ -392,38 +407,55 @@ line-height: 20px;
     width: 265px;
 }
 
+.sec1 {
+    border-radius: 5%;
+}
+
+#sld1 {
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    border-radius: 30px;
+}
+
 @media (max-width: 768px) {
-    .sec1 h1, .sec1 h2, .sec1 p, #tgs, #addr {
-    padding-left: 20px;
-    /* width: 720px;  */
-}
-#m1 {
-    padding-left: 20px;
 
-}
-
-.c1 h3 {
-    top: -60px;
-}
-.c2 {
-    top: -50px;
+    .sec1 h1,
+    .sec1 h2,
+    .sec1 p,
+    #tgs,
+    #addr {
+        padding-left: 20px;
+        /* width: 720px;  */
     }
 
-.tel {
-    padding-left: 30px;
-    justify-content: flex-start;
-}
+    #m1 {
+        padding-left: 20px;
 
-.tel div:nth-child(2) {
-padding-left: 20px;
-}
+    }
 
-.m1_b {
-    height: 420px;
+    .c1 h3 {
+        top: -60px;
+    }
 
-}
+    .c2 {
+        top: -50px;
+    }
 
-/* #tel1 {
+    .tel {
+        padding-left: 30px;
+        justify-content: flex-start;
+    }
+
+    .tel div:nth-child(2) {
+        padding-left: 20px;
+    }
+
+    .m1_b {
+        height: 420px
+    }
+
+    /* #tel1 {
     padding-left: 30px;
 } */
 
