--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,7 @@ header {
             width: 195px;
             margin-top: 23px;
             display: flex;
+            /* display: none; */
             justify-content: space-between;
         }
 
