--- a/css/events.css
+++ b/css/events.css
@@ -214,7 +214,8 @@ top: -60px;
 .hc1 { 
     position: relative;
     top: 450px;
-    min-height: 170px;
+    height: 170px;
+    overflow:auto;	
  }
 
 .card_arrow {
