--- a/css/about.css
+++ b/css/about.css
@@ -85,28 +85,36 @@
             margin-right: 100px;
             /* border: 1px solid #F3F3F3;  */
         }
-        
+        .sec2 h2{
+            margin-top: 70px;
+            margin-left: -30px;
+            margin-bottom: -20px;
+        }
         #part {
             width: 100%;
             height: 160px;
-            margin: 50px 0 0 0;
+            /* margin: 50px 0 0 0; */
             display: flex;
-        
         }
         
         #part div {  
-            width: 100%;
+            width: 160px;
+            height: 50px;
             /* height: 100%; */
             border-left: 1px solid #F3F3F3;
             display: flex;
-            justify-content: center;
+            /* justify-content: center; */
             align-items: center;
+            margin: auto;
         }
         
         #part div:last-child {
             border-right: 1px solid #F3F3F3;
         }
-
+        #part img{
+            width: 100%;
+            height: 100%;
+        }
 
         @media (max-width: 768px) {
 
