--- a/css/education.css
+++ b/css/education.css
@@ -169,3 +169,45 @@
 #car7 {
     margin-bottom: 141px;
 }
+
+@media (max-width: 500px) { 
+
+    #mainCont {
+        width: 360px;
+    }
+
+    .sec1 h1, .sec1 h2, .sec1 p, #tgs,
+    #addr {
+        padding-left: 10px;
+    }
+
+    .sec1 h1 {
+        margin-top: 40px;
+    }
+
+    .sec1 p, .sec1 h2 {
+        width: 350px; 
+    }
+
+    #vline1 {
+        margin: 20px 0 19px 26px;
+
+    } 
+
+    .card {
+        flex-direction: column;
+        padding-right: 0;
+        padding-left: 20px;
+        margin-bottom: 0;
+    }
+
+    #car1 > div {
+        height: 400px;
+    }
+
+    .card div {
+        width: 320px;
+        margin-bottom: 20px;
+        margin-right: 0;
+    }
+}
