--- a/css/pages.css
+++ b/css/pages.css
@@ -219,8 +219,11 @@ input[type="submit"] {
             border-top: 1px solid #F3F3F3;
             display: flex;
         } 
+
+        .mobsocial{display: none;}
+
         
-        footer > div:nth-child(1) {
+        footer > div:nth-child(2) {
         width: 146px;
         height: 13px;
         margin-top: 105px;
@@ -230,11 +233,11 @@ input[type="submit"] {
         color: var(--mainColor)
         
         }
-        footer > div:nth-child(1) a {
+        footer > div:nth-child(2) a {
         color: var(--mainColor)
         }
         
-        footer > div:nth-child(2) {
+        footer > div:nth-child(3) {
             width: 545px;
             height: 82px;
             margin-left: 176px;
@@ -353,7 +356,7 @@ input[type="submit"] {
         border-bottom: 1px solid #F3F3F3;
 
     } 
-    footer > div:nth-child(1) {
+    footer > div:nth-child(2) {
         order: 1;
         margin-top: 40px;
         position: absolute;
@@ -415,6 +418,141 @@ input[type="submit"] {
     
     .msocial {
         margin: 398px 0 46px 17px;
+    }
+
+  }
+
+  @media (max-width: 500px) {
+
+    body {
+        max-width: var(--androidWidth);
+        margin: 0 auto;
+    }
+
+    aside {
+        display: none;
+    } 
+    
+    #header_mobile {
+        width: var(--androidWidth);
+        position: relative;
+        height: 48px;
+       
+    }
+
+     #logo_pages_small {
+        width: 105px;
+        padding: 8px 0 0 10px;    
+    }
+
+    #burgerMenu{
+        display: block;
+        position: absolute;
+        left: 325px;
+        top: 17px; 
+    }
+
+    main, footer {
+        width: var(--androidWidth);
+    }
+
+    .sec1 p{
+        padding-right: 10px;
+    }
+    .sec1 h1, .sec1 h2, .sec1 p, .sec1 li {
+        padding-left: 10px;
+    }
+
+       /* обратная связь */
+.sec3  {
+    width: 328px;
+    height: 621px;
+    margin-left: 15px;
+    margin-right: 10px;
+    padding-top: 10px;
+    margin-bottom: 20px;
+    flex-direction: column;
+}
+
+ .sec3 h2 {
+    padding-top: 30px;
+    padding-bottom: 17px;
+}
+
+input, textarea {
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+input[type="submit"] {
+    width: 276px;
+}
+
+#f2 {
+    margin-top: 20px;
+    text-align: center;
+}
+
+#f2 img {display: none;}
+
+
+/* обратная связь */
+
+    footer {
+        height: 345px;
+        flex-direction: column;
+        border-bottom: none;
+
+    } 
+    footer > div:nth-child(2) {
+        display: none;
+    }
+
+
+    .mobsocial {
+        width: 195px;
+        height: 36px;
+        margin: 25px 0 0 15px;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    #foot2 {
+        width: 309px;
+        margin: 22px 0 0 15px;
+    }
+
+    #logo {
+        width: 350px;
+        margin: 50px 0 50px 15px;
+    }
+
+    #logo > img:nth-child(1) {
+        left: -18px;
+        top: 20px;
+    }
+
+    #logo > img:nth-child(2) {
+        left: -20px;
+        top: 10px;
+    }
+
+    
+    #logo > img:nth-child(3) {
+        left: -15px;
+        top: 26px;
+    }
+
+    .burg1 {
+        height: 680px;
+        top: 10px;
+        left: 0;
+        z-index: 1;
+    }
+
+    .msocial { 
+        display: block;
+        margin: 45px 0 0 17px;
     }
 
   }
